modificando para presentación final

--- a/homePage/web/homePage.html
+++ b/homePage/web/homePage.html
@@ -79,11 +79,11 @@
                         <div class='modal-header flex'>
                             <span id='close' class='close'>&times;</span>
                         </div>
-                        <div class='modal-body-ad'>
+                <!--    <div class='modal-body-ad'>
                             <div class='ad-container'>
                                 <div id="modal_show"></div>
                             </div>
-                        </div>
+                        </div>-->
                         <div class='footer'></div>
                     </div>
                 </div>
