--- a/video/web/series.html
+++ b/video/web/series.html
@@ -75,29 +75,29 @@
     <div id="0403_1514399400011" onclick="openFriends()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
       <div class="video-img">
       </div>
-        <img style="height:115.75px;width:174px;" class="img-responsive" src="../image/posterSerie/serie1/serie1poster.jpg">
-      <div class="movie_title">FRIENDS</div>
+        <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterSerie/serie1/serie1poster.jpg">
+      <div class="movie_title">The Big Bang Theory</div>
     </div>
     <!-- supercampeones -->
     <div id="0403_1514399400011" onclick="openSuper()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
       <div class="video-img">
       </div>
-        <img style="height:115.75px;width:174px;" class="img-responsive" src="../image/posterSerie/serie2/serie2poster.jpg">
-      <div class="movie_title">SUPERCAMPEONES</div>
+        <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterSerie/serie2/serie2poster.jpg">
+      <div class="movie_title">How I met your mother</div>
     </div>
     <!-- pirry -->
     <div id="0403_1514399400011" onclick="openPirry()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
       <div class="video-img">
-        <img style="height:115.75px;width:174px;" class="img-responsive" src="../image/posterSerie/serie3/serie3poster.jpg">
+        <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterSerie/serie3/serie3poster.jpg">
       </div>
-      <div class="movie_title">EFECTO PIRRY</div>
+      <div class="movie_title">F.R.I.E.N.D.S</div>
     </div>
     <!-- la tele letal -->
     <div id="0403_1514399400011" onclick="openLatele()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
       <div class="video-img">
-        <img style="height:115.75px;width:174px;" class="img-responsive" src="../image/posterSerie/serie4/serie4poster.jpg">
+        <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterSerie/serie4/serie4poster.jpg">
       </div>
-      <div class="movie_title">LA TELE LETAL</div>
+      <div class="movie_title">Los Simpsons</div>
     </div>
 
 </div>
