nuevos portales enbebidos y arreglo de imgaen de approve.html

--- a/internet/web/approve.html
+++ b/internet/web/approve.html
@@ -29,9 +29,9 @@
         <script src="../../common/js/NewPopup.js"></script>
         <!-- Comentamos el approve.js para saber si se repite o no -->
         <script type="text/javascript" src="../js/approve.js"></script>
-        <script type="text/javascript" src="../js/portals.js"></script>
+        <!-- <script type="text/javascript" src="../js/portals.js"></script> -->
         <script src="../../common/js/base/get_ad.js"></script>
-        <script type="text/javascript" src="../js/redirect.js"></script>
+        <!-- <script type="text/javascript" src="../js/redirect.js"></script> -->
         <!-- script toggle -->
         <script src="../js/toggle.js"></script>
         <!--<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101214096"
@@ -105,19 +105,19 @@
                             </div>
                         </div>
                         <!-- Portal 2 -->
-                        <!-- <div class="accordion-container">
-                            <a href="#" class="accordion-titulo">Portal COPETRAN<span class="toggle-icon"></span></a>
+                        <div class="accordion-container">
+                            <a href="#" class="accordion-titulo">Chat Brasilia<span class="toggle-icon"></span></a>
                             <div class="accordion-content">
-                                    <iframe src="https://www.copetran.com/" frameborder="0"></iframe>
+                                    <iframe src="https://widget.tidiochat.com/site/exxankr5gagujq62quzy7mkkzpowbra6" frameborder="0"></iframe>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- Portal 3 -->
-                        <!-- <div class="accordion-container">
-                            <a href="https://www.facebook.com/" class="accordion-titulo">Portal Facebook<span class="toggle-icon"></span></a>
+                        <div class="accordion-container">
+                            <a href="https://www.facebook.com/" class="accordion-titulo">Encuesta Brasilia<span class="toggle-icon"></span></a>
                             <div class="accordion-content">
-                                    <iframe src="https://www.facebook.com/" frameborder="0"></iframe>
+                                    <iframe src="https://www.expresobrasilia.com/encuestabus" frameborder="0"></iframe>
                             </div>
-                        </div> -->
+                        </div>
                         <!-- Portal 4 -->
                         <!-- <div class="accordion-container">
                             <a href="#" class="accordion-titulo">Portal Banco de Bogotá<span class="toggle-icon"></span></a>
@@ -148,14 +148,14 @@
                         </div> -->
                     </div>
                     <!-- Contenedor de botones con redireccionables de la anterior version  -->
-                        <div class="row" id="contentBottom"></div>
+                        <!-- <div class="row" id="contentBottom"></div> -->
                         <div class="surf_internet tab-pane" id="time_line">
                             <div class="logo_cntr"></div>
                             <div id="Agree_info">
                                 <!--<input type="checkbox" id="Agree_checkbox" checked />-->
                                 <div  class="agree_checkbox">
-                                    <div id="agreeCheckBox" checkValue="1" class="agree_img"><img src="../images/checkBox_choice.png"/></div>
-                                    <label>I agree
+                                    <div id="agreeCheckBox" checkValue="1" class="agree_img"><img src="../image/checkBox_choice.png"/></div>
+                                    <label>Acepto los 
                                         <a href="notice.html">Términos y condiciones</a>
                                     </label>
                                 </div>
