colocando los simpson y arreglando internet

--- a/homePage/web/homePage.html
+++ b/homePage/web/homePage.html
@@ -38,7 +38,7 @@
             }
             #showAdDiv{position: relative;}
             /* modul */
-            .content-modul{padding: 8px 2px 10px 15px;}
+            .content-modul{padding: 20px 2px 10px 15px; margin-left: 20px;}
             .modul-padding-right{padding-right: 0px;}
             .modul-padding-left{padding-left: 0px;}
 
@@ -46,12 +46,9 @@
             margin-top: 2px;
             display: block;
             height: auto;
-            width:70%;
+            width:80%;
             max-width: 180px;
             transition-duration: 1s;
-            }
-            #home-07 {
-                margin-left: 8%;
             }
         </style>
 
@@ -116,18 +113,18 @@
             <!-- 02 Espacio publicitario -->
             <div class="content-modul">
                 <div class="row">
-                    <div id="showAdDiv" class="col-xs-5 modul-padding-right">
+                    <!-- <div id="showAdDiv" class="col-xs-5 modul-padding-right">
                         <div id="showAdSlide" class="swiper-container">
                         <div class="smallslide swiper-wrapper"></div>
-                        <script type="text/javascript">
-                                getAd02();
-                                </script>
+                            <script type="text/javascript">
+                                    getAd02();
+                            </script>
                         </div>
                         <div class="pagination-show"></div>
-                    </div>
+                    </div> -->
                     <div id="contentRight" class="col-xs-7 modul-padding-left"></div>
+                    <div class="col-xs-5 modul-padding-left" id="contentLeft"></div>
                 </div>
-                <div class="row" id="contentBottom"></div>
             </div>
         </div>
         <!-- <script type="text/javascript" src="../../common/js/interval.js"></script> -->
