--- a/internet/web/approve.html
+++ b/internet/web/approve.html
@@ -149,10 +149,28 @@
                     </div>
                     <!-- Contenedor de botones con redireccionables de la anterior version  -->
                         <!-- <div class="row" id="contentBottom"></div> -->
+                        
                         <div class="surf_internet tab-pane" id="time_line">
                             <div class="logo_cntr"></div>
+                                <div id="Agree_info">
+                                    <div  class="agree_checkbox">
+                                        <!--<div id="agreeCheckBox" checkValue="1" class="agree_img"><img src="../image/checkBox_choice.png"/></div>-->
+                                        <label id="Terms_btn">Estoy de acuerdo con
+                                            <a href="../../internet/web/notice.html">Terminos y condiciones</a>
+                                        </label>
+                                    </div>
+                                </div>	
+                                <div class="btn_cntr">
+                                    <button id="LoginBtn" class="register_cntr">
+                                        <span>Navegar por internet!</span>
+                                    </button>
+                                </div>
+                        </div>
+                        
+                        <!-- <div class="surf_internet tab-pane" id="time_line">
+                            <div class="logo_cntr"></div>
                             <div id="Agree_info">
-                                <!--<input type="checkbox" id="Agree_checkbox" checked />-->
+                                <input type="checkbox" id="Agree_checkbox" checked />
                                 <div  class="agree_checkbox">
                                     <div id="agreeCheckBox" checkValue="1" class="agree_img"><img src="../image/checkBox_choice.png"/></div>
                                     <label>Acepto los 
@@ -165,7 +183,7 @@
                                     <span>Navegar por internet</span>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                 </div>
             </div>
         </div>
