--- a/video/web/videos.html
+++ b/video/web/videos.html
@@ -73,28 +73,28 @@
     </div>
     <!-----------------影音列表-------------------->
     <!-- Lista de videos -->
-    <div id="0403_1514399400011" onclick="openUrban()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
+    <div id="0403_1514399400011" onclick="openUrban()" class="col-xs-6 col-sm-3 content-cell video-type-item" item="0403" name="undefined">
       <div class="video-img">
         <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterVideo/vid1/posvid1.jpg">
       </div>
       <div class="movie_title">Diomedes Díaz</div>
     </div>
 <!-- classic -->
-<div id="0403_1514399400011" onclick="openClassics()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
+<div id="0403_1514399400011" onclick="openClassics()" class="col-xs-6 col-sm-3 content-cell video-type-item" item="0403" name="undefined">
   <div class="video-img">
     <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterVideo/vid2/posvid2.jpg">
   </div>
   <div class="movie_title">Carlos Vives</div>
 </div>
 <!-- electronica -->
-<div id="0403_1514399400011" onclick="openElectro()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
+<div id="0403_1514399400011" onclick="openElectro()" class="col-xs-6 col-sm-3 content-cell video-type-item" item="0403" name="undefined">
   <div class="video-img">
     <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterVideo/vid3/posvid3.jpg">
   </div>
   <div class="movie_title">Guns 'n' Roses</div>
 </div>
     <!-- electronica -->
-    <div id="0403_1514399400011" onclick="openPop()" class="col-xs-6 col-sm-3 content-cell video-type-content" item="0403" name="undefined">
+    <div id="0403_1514399400011" onclick="openPop()" class="col-xs-6 col-sm-3 content-cell video-type-item" item="0403" name="undefined">
       <div class="video-img">
         <img style="height:257px;width:174px;" class="img-responsive" src="../image/posterVideo/vid4/posvid4.jpg">
       </div>
