--- a/homePage/web/homePage.html
+++ b/homePage/web/homePage.html
@@ -90,7 +90,7 @@
             <div class="header">
                 <div class='menu-btn'></div>
                 <div class='center-block header-center'>
-                    <img src='../../common/image/top_logo.png'/>
+                    <img  class="img-responsive" src='../../common/image/top_logo.png'/>
                 </div>
                 <div class="call-b">
                     <img src="../../common/image/callb.png" alt="">
