--- a/internet/web/approve.html
+++ b/internet/web/approve.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="../../common/css/idangerous.swiper.css">
         <link rel="stylesheet" type="text/css" href="../../common/css/public.css">
         <link rel="stylesheet" type="text/css" href="../css/internet.css">
-        <link rel="stylesheet" type="text/css" href="../css/pages.css">
+        <!-- <link rel="stylesheet" type="text/css" href="../css/pages.css"> -->
         <!-- link toggle -->
         <link rel="stylesheet" href="../css/toggle.css">
         <!-- set your website favicon -->
@@ -36,7 +36,7 @@
         <script src="../js/toggle.js"></script>
         <!--<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone/openapi/qc_loader.js" data-appid="101214096"
         data-redirecturi="http://17gimefi.com/index_qq_b.html" charset="utf-8"></script>-->
-        <style media="screen">
+        <!-- <style media="screen">
         .content-links {
             display: inline-block;
             width: 50%;
@@ -50,7 +50,7 @@
             text-align: center;
             cursor: pointer;
         }
-        </style>
+        </style> -->
     </head>
     <body>
 
