--- a/video/web/peliculas.html
+++ b/video/web/peliculas.html
@@ -49,25 +49,28 @@
     </div>
 
     <!-----------------广告位-------------------->
-    <div class="slide-ad">
-        <div id="VideoAdSlide1" class="swiper-container">
-            <div class="news-wrapper swiper-wrapper">
-                <script type="text/javascript">
+    <div class="no-scroll">
+
+        <div class="slide-ad">
+            <div id="VideoAdSlide1" class="swiper-container">
+                <div class="news-wrapper swiper-wrapper">
+                    <script type="text/javascript">
                     getAd('VideoAdSlide1');//获取01号广告位
-                </script>
+                    </script>
             </div>
         </div>
         <div class="pagination-news"></div>
     </div>
-
+    
     <!-----------------二级菜单-------------------->
     <div class="tabs-navbar">
         <ul>
             <script type="text/javascript">
                 generate_videoSecMenu(mid);//获取二级菜单
-            </script>
+                </script>
         </ul>
     </div>
+</div>
     <!-----------------影音列表-------------------->
     <div class="appsSwiper">
         <script type="text/javascript">
