--- a/homePage/web/signup.html
+++ b/homePage/web/signup.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="../../common/css/bootstrap.css">
-        <link rel="stylesheet" href="../../common/css/main.css">
+        <link rel="stylesheet" href="../../common/new/css/bootstrap.css">
+        <link rel="stylesheet" href="../../common/new/css/main.css">
         <!-- Style inputs -->
         <link rel="stylesheet" href="../css/style-inputs.css">
         <title>Sign Up</title>
@@ -20,13 +20,13 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="header">
-                            <img  src="../../common/images/header.jpg" alt="">
+                            <img  src="../../common/image/header.jpg" alt="">
                         </div>
                         <div class="header-call">
-                            <img src="../../common/images/callb.png" alt="">
+                            <img src="../../common/image/callb.png" alt="">
                         </div> 
                         <div class="header-logo">
-                                <img src="../../common/images/top_logo.png" alt="">
+                                <img src="../../common/image/top_logo.png" alt="">
                             </div> 
                     </div>
                 </div>
@@ -101,11 +101,11 @@
             </section>
         </main>
         <!-- Fontawesome -->
-        <script src="../../common/js/all.js"></script>
+        <script src="../../common/new/js/all.js"></script>
         <!-- JS for bootstrap -->
-        <script src="../../common/js/jquery-3.3.1.js" ></script>
-        <script src="../../common/js/popper.min.js"></script>
-        <script src="../../common/js/bootstrap.min.js"></script>
+        <script src="../../common/new/js/jquery-3.3.1.js" ></script>
+        <script src="../../common/new/js/popper.min.js"></script>
+        <script src="../../common/new/js/bootstrap.min.js"></script>
         <!-- Send Form JS -->
         <script src="../js/contact_form.js"></script>
     </body>
