--- a/homePage/web/signup.html
+++ b/homePage/web/signup.html
@@ -43,7 +43,7 @@
                                     <fieldset>
                                         <!-- Name -->
                                         <div class="control">
-                                            <input id="name" class="form-input" type="text" placeholder="Nombre">
+                                            <input id="fname" class="form-input" type="text" placeholder="Nombre">
                                             <span class="icons"><i class="fas fa-user"></i></span>
                                         </div>
                                         <!-- Email -->
