no scroll pages

--- a/video/web/serie1.html
+++ b/video/web/serie1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Titulo de la pagina web -->
-    <title>Friends</title>
+    <title>Series</title>
 
     <link rel="stylesheet" type="text/css" href="../../common/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../common/css/idangerous.swiper.css">
@@ -50,25 +50,28 @@
     </div>
 
     <!-----------------广告位-------------------->
-    <div class="slide-ad">
-        <div id="VideoAdSlide1" class="swiper-container">
-            <div class="news-wrapper swiper-wrapper">
-                <script type="text/javascript">
+    <div class="no-scroll">
+
+        <div class="slide-ad">
+            <div id="VideoAdSlide1" class="swiper-container">
+                <div class="news-wrapper swiper-wrapper">
+                    <script type="text/javascript">
                     getAd('VideoAdSlide1');//获取01号广告位
-                </script>
+                    </script>
             </div>
         </div>
-        <div class="pagination-news"></div>
-    </div>
-
-    <!-----------------二级菜单-------------------->
-    <div class="tabs-navbar">
-        <ul>
-            <script type="text/javascript">
+           <div class="pagination-news"></div>
+        </div>
+        
+        <!-----------------二级菜单-------------------->
+        <div class="tabs-navbar">
+            <ul>
+                <script type="text/javascript">
                 generate_videoSecMenu(mid);//获取二级菜单 //Obtener el menú secundario
-            </script>
+                </script>
         </ul>
     </div>
+</div>
     <!-----------------影音列表-------------------->
     <!-- Lista de videos -->
     <div class="appsSwiper">
