fix data base and upload data

--- a/homePage/web/signup.html
+++ b/homePage/web/signup.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <!-- Welcome words -->
-                    <form action="" method="POST">
+                    <form action="" method="">
                         <div class="row">
                             <div class="col-12 col-sm-6 mx-auto d-block text-center">
                                 <h4 class="welcome welcome-signup">REGÍSTRATE <br> PARA INGRESAR</h4>
@@ -43,7 +43,7 @@
                                     <fieldset>
                                         <!-- Name -->
                                         <div class="control">
-                                            <input id="fname" class="form-input" type="text" placeholder="Nombre">
+                                            <input id="name" class="form-input" type="text" placeholder="Nombre">
                                             <span class="icons"><i class="fas fa-user"></i></span>
                                         </div>
                                         <!-- Email -->
