--- a/homePage/web/index.html
+++ b/homePage/web/index.html
@@ -6,57 +6,117 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="../../common/new/css/bootstrap.css">
         <link rel="stylesheet" href="../../common/new/css/main.css">
-        <link rel="stylesheet" href="../css/index.css">
-        <title>H3S Portal Entretenimiento</title>
+        <!-- Style inputs -->
+        <link rel="stylesheet" href="../css/style-inputs.css">
+        <title>Sign Up</title>
     </head>
     <body>
-        <!-- Start content -->
-    <main>
-        <div class="background"></div>
-        <section>
+        <main>
+            <div class="background"></div>
+            <section>
+            <!-- Start content -->
             <div class="">
                 <!-- Header logo -->
-                <header>
-                    <div class="row">
-                        <div class="col-12">
-                            <img class="img-fluid rounded mx-auto d-block logo" src="../../common/image/logo.png" alt="H3S HARDWARE, SOFTWARE & SERVICE SOLUTIONS">
-                        </div>     
-                    </div>
-                </header>
-                <!-- Status Alert -->
                 <div class="row">
-                    <div class="col-12 mx-auto d-block text-center stmt_separator">
-                        <div id="warning"></div>
+                    <div class="col-12">
+                        <div class="header">
+                            <img  src="../../common/image/header.jpg" alt="">
+                        </div>
+                        <div class="header-call">
+                            <img src="../../common/image/callb.png" alt="">
+                        </div> 
+                        <div class="header-logo">
+                                <img src="../../common/image/top_logo.png" alt="">
+                            </div> 
                     </div>
                 </div>
                 <!-- Welcome words -->
-                <div class="row">
-                    <div class="col-12 col-sm-6 mx-auto d-block text-center">     
-                        <h4 class="welcome">BIENVENIDO <br> A NUESTRO <br> PORTAL DE <br> ENTRETENIMIENTO</h4>
-                    </div>
+                    <form action="" method="">
+                        <div class="row">
+                            <div class="col-12 col-sm-6 mx-auto d-block text-center">
+                                <h4 class="welcome welcome-signup">REGÍSTRATE <br> PARA INGRESAR</h4>
+                            </div>
+                        </div>
+                         <!-- Sign Up Form -->
+                        <div class="row">
+                            <div class="col-12 mx-auto d-block text-center ">
+                                    <fieldset>
+                                        <!-- Name -->
+                                        <div class="control">
+                                            <input id="name" class="form-input" type="text" placeholder="Nombre">
+                                            <span class="icons"><i class="fas fa-user"></i></span>
+                                        </div>
+                                        <!-- Email -->
+                                        <div class="control">
+                                            <input id="email" class="form-input" type="email" placeholder="Email">
+                                            <span class="icons"><i class="fas fa-envelope"></i></span>
+                                        </div>
+                                        <!-- Phone -->
+                                        <div class="control">
+                                            <input id="phone" class="form-input" type="text" placeholder="Teléfono">
+                                            <span class="icons"><i class="fas fa-phone"></i></span>
+                                        </div>
+                                        <!-- Age -->
+                                        <div class="control">
+                                            <select id="age" class="form-input">
+                                                <option value="">Edad</option>
+                                                    <option value"0-14">0-14</option>
+                                                    <option value"15-17">15-17</option>
+                                                    <option value"18-25">18-25</option>
+                                                    <option value"26-35">26-35</option>
+                                                    <option value"36-45">36-45</option>
+                                                    <option value"46-55">46-55</option>
+                                                    <option value"56-64">56-64</option>
+                                                    <option value"65">mayor 65</option>
+                                            </select>
+                                            <span class="icons"><i class="fas fa-user-plus"></i></span>
+                                        </div>
+                                        <!-- Gender -->
+                                        <div class="control">
+                                            <select id="gender" class="form-input" >
+                                                <option value="" >Sexo</option>
+                                                    <option value="M">Masculino</option>
+                                                    <option value="F">Femenino</option>
+                                                    <option value="O">Otro</option>
+                                            </select>
+                                            <span class="icons"><i class="fas fa-venus-mars"></i></span>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        <!-- Status Alert -->
+                        <div class="row">
+                            <div class="col-12 mx-auto d-block text-center stmt">
+                                <div id="warning"></div>
+                            </div>
+                        </div>
+                        <!-- Terms and conditions -->
+                        <div class="row">
+                            <div class="col-12 mx-auto d-block text-center terms">
+                                <input id="conditions" type="checkbox">
+                                <label for="conditions"></label>
+                                <span>Estoy de acuerdo con <a href="">Términos y condiciones</a></span>
+                            </div>
+                         </div>
+                        <!-- Action button -->
+                        <div class="row">
+                            <div class="col-12 mx-auto d-block text-center">
+                                <button id="send_btn" class="action-button" type="button">INGRESAR</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <!-- Terms and conditions -->
-                <div class="row">
-                    <div class="col-12 mx-auto d-block text-center terms">
-                        <input id="conditions" type="checkbox">
-                        <label for="conditions"></label>
-                        <span>Estoy de acuerdo con <a href="">Términos y condiciones</a></span>
-                    </div>
-                </div>
-                <!-- Action button -->
-                <div class="row">
-                    <div class="col-12 mx-auto d-block text-center">
-                        <button id="redirect_btn" class="action-button">REGÍSTRATE</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <!-- JS for bootstrap -->
-    <script src="../../common/new/js/jquery-3.3.1.slim.min.js" ></script>
-    <script src="../../common/new/js/popper.min.js"></script>
-    <script src="../../common/new/js/bootstrap.min.js"></script>
-    <!-- Redirect and accept Terms and conditions JS -->
-    <script src="../js/terms.js"></script>
+            </section>
+        </main>
+        <!-- Fontawesome -->
+        <script src="../../common/new/js/all.js"></script>
+        <!-- JS for bootstrap -->
+        <script src="../../common/new/js/jquery-3.3.1.js" ></script>
+        <script src="../../common/new/js/popper.min.js"></script>
+        <script src="../../common/new/js/bootstrap.min.js"></script>
+        <!-- Send Form JS -->
+        <script src="../js/contact_form.js"></script>
+        <script src="../js/init_session.js"></script>
+        <script src="../js/terms.js"></script>
     </body>
 </html>
