footer para index

--- a/homePage/web/index.html
+++ b/homePage/web/index.html
@@ -12,13 +12,14 @@
     </head>
     <body>
         <main>
+        <div class="container fluid">
             <div class="background"></div>
             <section>
             <!-- Start content -->
             <div class="">
                 <!-- Header logo -->
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 ">
                         <div class="header">
                             <img  src="../../common/image/header.jpg" alt="">
                         </div>
@@ -107,6 +108,14 @@
                     </form>
                 </div>
             </section>
+            <footer>
+                <div class="row">
+                    <div class="col-12 footer">
+                        <span>www.portalbrasilia.com</span>
+                    </div>
+                </div>
+            </footer>
+        </div>
         </main>
         <!-- Fontawesome -->
         <script src="../../common/new/js/all.js"></script>
