change tittle name and img for live poster videos

--- a/internet/web/approve.html
+++ b/internet/web/approve.html
@@ -54,7 +54,7 @@
     </head>
     <body>
 
-        <div id="" class="login_container" style="text-align: center;">
+        <div id="" class="login_container">
             <div class="container">
                 <div class="header">
                     <div class="menu-btn"></div>
