--- a/video/web/electro.html
+++ b/video/web/electro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Titulo de la pagina web -->
-    <title>Electronica</title>
+    <title>Conciertos</title>
     
     <link rel="stylesheet" type="text/css" href="../../common/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../common/css/idangerous.swiper.css">
