--- a/video/web/videoDetails.html
+++ b/video/web/videoDetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H3S WIFI</title>
+    <title>Multimedia</title>
     <link rel="stylesheet" type="text/css" href="../../common/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../../common/css/idangerous.swiper.css">
     <link rel="stylesheet" type="text/css" href="../../common/css/public.css">
