subs and trilers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script type="text/javascript">
          // Este script redirecciona la pagina a full.html que esta en la siguiente direccion:
          //homePage/web/full.html Aqui es donde se hace la muestra de la publicidad incial.
-             window.location.href = "homePage/web/index.html";
+             window.location.href = "homePage/web/homePage.html";
       </script>
    </body>
 </html>
