--- a/homePage/web/homePage.html
+++ b/homePage/web/homePage.html
@@ -21,7 +21,7 @@
             /* Ancho del contenedor para dispositivos de diferentes tamaños. */
             body {
             /*background: url('../image/background.jpg') no-repeat center center fixed;*/
-            background-color: aliceblue;
+            background-color: #000000;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
